update with ripple tool functions

--- a/requirements.txt
+++ b/requirements.txt
@@ -120,6 +120,8 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.13
+asyncio
+xrpl-py
 langchain-community
 langchain-text-splitters
 langchain-core
