--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 LANGCHAIN_TRACING_V2="true"
 LANGCHAIN_API_KEY="..."
+GOOGLE_APPLICATION_CREDENTIALS="...
 GOOGLE_API_KEY="..."
 TAVILY_API_KEY="..."
